force-app/main/default/objects/FMG_Configuration__c/FMG_Configuration__c.object-meta.xml
<CustomObject>
    <description>Contains the settings for FMG Applications and Processes</description>
    <label>FMG Configuration</label>
    <nameField>
        <label>FMG Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMG Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>