force-app/main/default/objects/FMG_Configuration__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The name of the application/salesforce application that is going to be using this setting</description>
    <label>Application</label>
    <length>100</length>
    <type>Text</type>
</CustomField>