force-app/main/default/objects/FMG_Configuration__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <description>Information on the setting</description>
    <label>Info</label>
    <type>TextArea</type>
</CustomField>