force-app/main/default/objects/FMG_Configuration__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>