force-app/main/default/objects/FMG_Configuration__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Contains the settings to be used</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>