force-app/main/default/objects/FMG_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Setting__c</columns>
    <columns>Value__c</columns>
    <columns>Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>